--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
-
+    <link rel="stylesheet" href="./CSS/footer-style.css">
     <title>SoundG3</title>
   </head>
   <body>
@@ -99,7 +99,7 @@
                   </ul>
                 </div>
                 <div class="card-footer bg-dark">
-                  <a href="#" class="btn btn-primary">Saber más</a>
+                  <a href="./pages/error404.html" class="btn btn-primary">Saber más</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                   </ul>
                 </div>
                 <div class="card-footer bg-dark">
-                  <a href="#" class="btn btn-primary">Saber más</a>
+                  <a href="./pages/error404.html" class="btn btn-primary">Saber más</a>
                 </div>
               </div>
             </div>
@@ -167,7 +167,7 @@
                   </ul>
                 </div>
                 <div class="card-footer bg-dark">
-                  <a href="#" class="btn btn-primary">Saber más</a>
+                  <a href="./pages/error404.html" class="btn btn-primary">Saber más</a>
                 </div>
               </div>
             </div>
@@ -229,7 +229,7 @@
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./pages/error404.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Ayuda</a
                 >
@@ -260,14 +260,14 @@
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./pages/error404.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Información Legal</a
                 >
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./pages/error404.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Privacidad</a
                 >
