--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
@@ -175,112 +174,7 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="text-center py-3">
-        <div class="row m-0">
-          <div
-            class="col-12 col-sm-12 col-md-12 col-lg-3"
-            id="contenedorLogoFooter"
-          >
-            <a
-              href="index.html"
-              class="contenedorLogo d-flex justify-content-center"
-            >
-              <img
-                src="./img/logosoundg3.png"
-                alt="Logo"
-                class=""
-                id="imgFooter"
-              />
-            </a>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Productos</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ingresar</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href="./pages/registro.html"
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Registro</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Acerca de</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Acerca de Nosotros</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href="./pages/error404.html"
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ayuda</a
-                >
-              </li>
-            </ul>
-            <div class="d-flex flex-column">
-              <p class="text-light">Síguenos en nuestras redes:</p>
-              <div class="d-flex justify-content-center">
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-instagram fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-facebook fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-twitter fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-linkedin fs-3 m-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Legales</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href="./pages/error404.html"
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Información Legal</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href="./pages/error404.html"
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Privacidad</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid d-flex justify-content-center">
-        <p class="text-light">
-          &copy; Sound G3 - Todos los derechos reservados
-        </p>
-      </div>
+    <footer id="inyectarFooter">
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -294,5 +188,6 @@
     <script src="./JS/localStorage.js"></script>
     <script src="./JS/index.js"></script>
     <script src="./JS/navbar.js"></script>
+    <script src="./JS/footer.js"></script>
   </body>
 </html>
