se agrego logica para extraer datos de localstorage y rellenar tabla

--- a/pages/usuarios.html
+++ b/pages/usuarios.html
@@ -117,23 +117,12 @@
               <th scope="col">Email</th>
               <th scope="col">Contraseña</th>
               <th scope="col">Rol</th>
+              <th scope="col">habilitado</th>
               <th scope="col">Acciones</th>
             </tr>
           </thead>
-          <tbody id="tablaUsuario">
-            <tr>
-              <th scope="row">1</th>
-              <td>Juan</td>
-              <td>juan123</td>
-              <td>juan@gmail.com</td>
-              <td>12345678</td>
-              <td>User</td>
-              <td>
-                <a class="btn btn-info my-1" href="">Detalles</a>
-                <button class="btn btn-warning">Editar</button>
-                <button class="btn btn-danger my-1">Borrar</button>
-              </td>
-            </tr>
+          <tbody>
+            
           </tbody>
         </table>
       </div>
@@ -252,6 +241,6 @@
     crossorigin="anonymous"
   ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./js/app.js" type="module"></script>
+    <script src="../JS/usuarios.js"></script>
   </body>
 </html>
