--- a/pages/registro.html
+++ b/pages/registro.html
@@ -85,12 +85,13 @@
                 required
               />
             </div>
+            <div class="d-grid">
+              <button class="btn btn-success" id="btnRegistrarse">Crear Cuenta
+                
+              </button>
           </fieldset>
         </form>
-        <div class="d-grid">
-          <button class="btn btn-success" id="btnRegistrarse">
-            Crear Cuenta
-          </button>
+        
         </div>
         <div class="d-flex flex-row justify-content-center">
           <p class="pe-3 pt-3" id="textoRegistro">¿Ya tienes una cuenta?</p>
