Se solucionaron errores en la logica

--- a/pages/abmAlbumes.html
+++ b/pages/abmAlbumes.html
@@ -25,12 +25,12 @@
     />
     <link rel="stylesheet" href="../CSS/abmStyle.css" />
     <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/EstilosNav.css">
     <link rel="stylesheet" href="../CSS/footer-style.css">
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5" id="inyectarNavbar">
-    </header>
+    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main>
       <div class="botonesABM">
         <button
@@ -139,5 +139,6 @@
     <script src="../JS/abmAlbumes.js"></script>
     <script src="../JS/navbarPage.js"></script>
     <script src="../JS/footerPage.js"></script>
+    <script src="../JS/validaciones/abmAdmin.js"></script>
   </body>
 </html>
