--- a/pages/abmArtistas.html
+++ b/pages/abmArtistas.html
@@ -25,12 +25,12 @@
     />
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/abmStyle.css" />
+    <link rel="stylesheet" href="../CSS/EstilosNav.css">
     <link rel="stylesheet" href="../CSS/footer-style.css">
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5" id="inyectarNavbar">
-    </header>
+    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main>
       <div class="botonesABM">
         <button
@@ -143,7 +143,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/abmArtistas.js"></script>
-    <script src="../JS/navbarPage.js"></script>
     <script src="../JS/footerPage.js"></script>
+    <script src="../JS/navbarPage.js"></script>
+    <script src="../JS/validaciones/abmAdmin.js"></script>
   </body>
 </html>
