--- a/pages/abmCanciones.html
+++ b/pages/abmCanciones.html
@@ -23,14 +23,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="../CSS/abmStyle.css" />
     <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/abmStyle.css" />
+    <link rel="stylesheet" href="../CSS/EstilosNav.css">
     <link rel="stylesheet" href="../CSS/footer-style.css">
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5" id="inyectarNavbar">
-    </header>
+    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main>
       <div class="botonesABM">
         <button
@@ -177,6 +177,7 @@
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/abmCanciones.js"></script>
     <script src="../JS/navbarPage.js"></script>
+    <script src="../JS/validaciones/abmAdmin.js"></script>
     <script src="../JS/footerPage.js"></script>
   </body>
 </html>
