--- a/pages/artista.html
+++ b/pages/artista.html
@@ -21,9 +21,12 @@
       href="../img/FavIcon/android-chrome-512x512.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="../CSS/EstilosNav.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/footer-style.css">
   </head>
   <body>
-    <head></head>
+    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main>
       <section class="container-fluid fondoPortada pb-5">
         <div>
@@ -39,7 +42,7 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer id="inyectarFooter"></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -51,5 +54,7 @@
     ></script>
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/artista.js"></script>
+    <script src="../JS/navbarPage.js"></script>
+    <script src="../JS/footerPage.js"></script>
   </body>
 </html>
