--- a/pages/listaDeReproduccion.html
+++ b/pages/listaDeReproduccion.html
@@ -37,6 +37,9 @@
       <div>
         <h1 class="text-white" id="titulo">Canciónes favoritas</h1>
       </div>
+      <div>
+        
+      </div>
     </main>
     <footer id="inyectarFooter"></footer>
     <script src="../JS/footerPage.js"></script>
