--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
-    <link rel="stylesheet" href="./CSS/footer-style.css">
+    <link rel="stylesheet" href="./CSS/footer-style.css" />
     <title>SoundG3</title>
   </head>
   <body>
@@ -52,130 +53,139 @@
           </button>
         </div>
       </section>
-      <h2 class="text-white mx-3 mt-5">Canciones destacadas</h2>
-      <section class="my-3 mx-0" id="seccionCanciones"></section>
-      <section class="my-5">
-        <div class="d-flex flex-column container">
-          <div>
-            <h2 class="text-white mx-3 mt-5">Todas las canciones</h2>
+      <section class="container">
+        <h2 class="text-white mx-3 mt-5">Canciones destacadas</h2>
+        <section class="my-3 mx-0" id="seccionCanciones"></section>
+        <section class="my-5">
+          <div class="d-flex flex-column container">
+            <div>
+              <h2 class="text-white mx-3 mt-5">Todas las canciones</h2>
+            </div>
+            <div class="d-flex">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Buscar Canción"
+                id="inputBuscarCancion"
+              />
+            </div>
+            <div class="row m-0" id="rowInyectarCanciones"></div>
           </div>
-          <div class="d-flex">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Buscar Canción"
-              id="inputBuscarCancion"
-            />
-          </div>
-          <div class="row m-0" id="rowInyectarCanciones"></div>
-        </div>
-      </section>
-      <section class="my-5">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 mt-3">
-              <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">
-                    Plan Básico: "Melodía Esencial"
-                  </h5>
-                  <ul class="text-start">
-                    <li>Precio: $4.99 al mes</li>
-                    <li>
-                      Acceso ilimitado a la biblioteca de música estándar.
-                    </li>
-                    <li>Calidad de transmisión estándar (128 kbps).</li>
-                    <li>Anuncios ocasionales entre canciones.</li>
-                    <li>
-                      Posibilidad de crear listas de reproducción
-                      personalizadas.
-                    </li>
-                    <li>
-                      Descarga de hasta 30 canciones al mes para escuchar sin
-                      conexión.
-                    </li>
-                    <li>Soporte en dispositivos móviles y de escritorio.</li>
-                  </ul>
+        </section>
+        <section class="my-5 container">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 mt-3">
+                <div class="card custom-card">
+                  <div class="card-body text-bg-dark p-3">
+                    <h5 class="card-title my-3">
+                      Plan Básico: "Melodía Esencial"
+                    </h5>
+                    <ul class="text-start">
+                      <li>Precio: $4.99 al mes</li>
+                      <li>
+                        Acceso ilimitado a la biblioteca de música estándar.
+                      </li>
+                      <li>Calidad de transmisión estándar (128 kbps).</li>
+                      <li>Anuncios ocasionales entre canciones.</li>
+                      <li>
+                        Posibilidad de crear listas de reproducción
+                        personalizadas.
+                      </li>
+                      <li>
+                        Descarga de hasta 30 canciones al mes para escuchar sin
+                        conexión.
+                      </li>
+                      <li>Soporte en dispositivos móviles y de escritorio.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer bg-dark">
+                    <a href="./pages/error404.html" class="btn btn-primary"
+                      >Saber más</a
+                    >
+                  </div>
                 </div>
-                <div class="card-footer bg-dark">
-                  <a href="./pages/error404.html" class="btn btn-primary">Saber más</a>
+              </div>
+              <div class="col-lg-4 col-md-6 mt-3">
+                <div class="card custom-card">
+                  <div class="card-body text-bg-dark p-3">
+                    <h5 class="card-title my-3">
+                      Plan Estándar: "Armonía Completa"
+                    </h5>
+                    <ul class="text-start">
+                      <li>Precio: $9.99 al mes</li>
+                      <li>
+                        Acceso completo a la biblioteca de música premium.
+                      </li>
+                      <li>Calidad de transmisión mejorada (320 kbps).</li>
+                      <li>Sin anuncios durante la reproducción.</li>
+                      <li>
+                        Creación de listas de reproducción ilimitadas y
+                        personalizadas.
+                      </li>
+                      <li>
+                        Descarga ilimitada de canciones para escuchar sin
+                        conexión.
+                      </li>
+                      <li>Función de recomendaciones personalizadas.</li>
+                      <li>
+                        Soporte en dispositivos móviles, de escritorio y
+                        dispositivos inteligentes.
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="card-footer bg-dark">
+                    <a href="./pages/error404.html" class="btn btn-primary"
+                      >Saber más</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mt-3">
+                <div class="card custom-card">
+                  <div class="card-body text-bg-dark p-3">
+                    <h5 class="card-title my-3">
+                      Plan Premium: "Sinfonía Total"
+                    </h5>
+                    <ul class="text-start">
+                      <li>Precio: $14.99 al mes</li>
+                      <li>
+                        Acceso a la biblioteca completa de música, incluyendo
+                        lanzamientos exclusivos.
+                      </li>
+                      <li>
+                        Calidad de transmisión de alta fidelidad (lossless).
+                      </li>
+                      <li>Reproducción sin interrupciones y sin anuncios.</li>
+                      <li>
+                        Creación de listas de reproducción colaborativas con
+                        otros usuarios.
+                      </li>
+                      <li>
+                        Descarga ilimitada de canciones y álbumes completos para
+                        escuchar sin conexión.
+                      </li>
+                      <li>Acceso a eventos en vivo y conciertos exclusivos.</li>
+                      <li>
+                        Soporte en dispositivos móviles, de escritorio,
+                        dispositivos inteligentes y sistemas de audio de alta
+                        gama.
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="card-footer bg-dark">
+                    <a href="./pages/error404.html" class="btn btn-primary"
+                      >Saber más</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mt-3">
-              <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">
-                    Plan Estándar: "Armonía Completa"
-                  </h5>
-                  <ul class="text-start">
-                    <li>Precio: $9.99 al mes</li>
-                    <li>Acceso completo a la biblioteca de música premium.</li>
-                    <li>Calidad de transmisión mejorada (320 kbps).</li>
-                    <li>Sin anuncios durante la reproducción.</li>
-                    <li>
-                      Creación de listas de reproducción ilimitadas y
-                      personalizadas.
-                    </li>
-                    <li>
-                      Descarga ilimitada de canciones para escuchar sin
-                      conexión.
-                    </li>
-                    <li>Función de recomendaciones personalizadas.</li>
-                    <li>
-                      Soporte en dispositivos móviles, de escritorio y
-                      dispositivos inteligentes.
-                    </li>
-                  </ul>
-                </div>
-                <div class="card-footer bg-dark">
-                  <a href="./pages/error404.html" class="btn btn-primary">Saber más</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 mt-3">
-              <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">
-                    Plan Premium: "Sinfonía Total"
-                  </h5>
-                  <ul class="text-start">
-                    <li>Precio: $14.99 al mes</li>
-                    <li>
-                      Acceso a la biblioteca completa de música, incluyendo
-                      lanzamientos exclusivos.
-                    </li>
-                    <li>
-                      Calidad de transmisión de alta fidelidad (lossless).
-                    </li>
-                    <li>Reproducción sin interrupciones y sin anuncios.</li>
-                    <li>
-                      Creación de listas de reproducción colaborativas con otros
-                      usuarios.
-                    </li>
-                    <li>
-                      Descarga ilimitada de canciones y álbumes completos para
-                      escuchar sin conexión.
-                    </li>
-                    <li>Acceso a eventos en vivo y conciertos exclusivos.</li>
-                    <li>
-                      Soporte en dispositivos móviles, de escritorio,
-                      dispositivos inteligentes y sistemas de audio de alta
-                      gama.
-                    </li>
-                  </ul>
-                </div>
-                <div class="card-footer bg-dark">
-                  <a href="./pages/error404.html" class="btn btn-primary">Saber más</a>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
+        </section>
       </section>
     </main>
-    <footer id="inyectarFooter">
-    </footer>
+    <footer id="inyectarFooter"></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
