Se solucionaron errores del nav y el footer

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -154,6 +154,7 @@
       src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../JS/footerPage.js"></script>
     <script src="../JS/navbarPage.js"></script>
   </body>
 </html>
