--- a/pages/registro.html
+++ b/pages/registro.html
@@ -15,7 +15,6 @@
     <title>Registrate</title>
   </head>
   <body>
-    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main id="mainRegistro">
       <section class="container contenedorForm py-3">
         <h3 class="text-center mb-3">
@@ -75,19 +74,6 @@
                 required
               />
             </div>
-            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
-              <label for="confirmarContraseña" class="form-label"
-                >Confirmar Contraseña</label
-              >
-              <input
-                type="password"
-                class="form-control focus-ring py-1 px-2 text-decoration-none border rounded-2"
-                id="confirmarContraseña"
-                minlength="8"
-                maxlength="16"
-                required
-              />
-            </div>
           </fieldset>
         </form>
         <div class="d-grid">
@@ -97,7 +83,7 @@
         </div>
         <div class="d-flex flex-row justify-content-center">
           <p class="pe-3 pt-3" id="textoRegistro">¿Ya tienes una cuenta?</p>
-          <a href="./login.html" class="text-decoration-none pt-3 ps-3"
+          <a href="./iniciarSesion.html" class="text-decoration-none pt-3 ps-3"
             >Inicia Sesión</a
           >
         </div>
@@ -113,7 +99,7 @@
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/registro.js"></script>
     <script src="../JS/navbarPage.js"></script>
-    <script src="../JS/footerPage.js"></script>
     <script src="../JS/validaciones/validarRegistro.js"></script>
+    <script src="../JS/footerPage.js"></script>
   </body>
 </html>
